@@ -20,7 +20,7 @@ Depends: ${python:Depends}
 Recommends: python-apt
 Suggests: gpgv
 Provides: python-deb822
-Conflicts: python-deb822, python-apt (< 0.7.11.1)
+Conflicts: python-deb822, python-apt (< 0.7.94~)
 Replaces: python-deb822
 Description: Python modules to work with Debian-related data formats
  This package provides Python modules that abstract many formats of Debian 
