@@ -28,6 +28,9 @@ python-debian (0.1.15) UNRELEASED; urgency=low
     method if the encoding of a file you are reading in is not utf-8.
     (The dump method also takes an encoding argument, if you wish the
     output not to be utf-8-encoded.) (Closes: #495272)
+  * Use the apt_pkg.TagFile iterator interface instead of hacking its
+    offset.  As of python-apt version 0.7.94, that interface doesn't use
+    shared storage. (Closes: #571470)
 
  -- Filippo Giunchedi <filippo@debian.org>  Sun, 09 Aug 2009 13:01:16 +0100
 
